Handle null body